# laser-engraving-vectorizer

./: CLAUDE.md  LASER-SPECS.md  README.md  RESEARCH.md  pyproject.toml
examples/: SUMMARY.md
lib/: contact_sheet.py  edge_detect.py  remove_background.py  segment.py  simplify.py  svg_to_png.py  threshold.py  vectorize.py
